--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "@lexical/html": "^0.17.1",
     "@lexical/list": "^0.17.1",
     "@lexical/react": "^0.17.1",
+    "@lexical/rich-text": "^0.17.1",
+    "@lexical/utils": "^0.17.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "lexical": "^0.17.1",
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "typescript": "^5.6.2",
     "use-debounce": "^10.0.3",
     "web-vitals": "^2.1.4"
